updating gh-pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <section id="main">
         <article class="container">
-          <h1 class="hero">Walkie<img src="/img/walkie.png" alt="" /></h1>
+          <h1 class="hero">Walkie<img src="img/walkie.png" alt="" /></h1>
           <p>Stay up-to-date on everything happening on
 <a href="http://basecamp.com">Basecamp</a>. Walkie is a shell script that will
 notify you when something’s going down at HQ.</p>
