--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <section id="main">
         <article class="container">
-          <h1 class="hero">Walkie<img src="img/walkie.png" alt="" /></h1>
+          <h1 class="hero">Walkie</h1>
           <p>Stay up-to-date on everything happening on
 <a href="http://basecamp.com">Basecamp</a>. Walkie is a nodejs script that will
 notify you when something’s going down at HQ.</p>
@@ -101,6 +101,15 @@ to send notifications.</p>
 <span class="nb">export </span><span class="nv">WALKIE_PROJECTID</span><span class="o">=</span><span class="s2">&quot;789100&quot;</span>
 </code></pre></div>
 
+<h2 id="screenshot">Screenshot</h2>
+
+<p>
+  <div data-picture="" data-alt="walkie">
+      <div data-src="/img/walkie-small.png"></div>
+      <div data-src="/img/walkie-big.png" data-media="(min-width: 412px)"></div>
+      <noscript><img src="/img/walkie-big.png" alt="walkie" /></noscript>
+  </div>
+</p>
 
         </article>
     </section>
