--- a/boxes/this-is-a-box-2/index.html
+++ b/boxes/this-is-a-box-2/index.html
@@ -64,7 +64,7 @@
 
     <section id="main">
         <article class="container">
-          <h1 class="hero">This is a box<img src="" alt="" /></h1>
+          <h1 class="hero">This is a box</h1>
           
 
         </article>
