updating gh-pages

--- a/hubot/index.html
+++ b/hubot/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Hubot Script | Walkie | Tyler Benziger</title>
+  <title>Walkie &hearts; Hubot | Walkie | Tyler Benziger</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="shortcut icon" href="http://gravatar.com/avatar/9f5734a7063a4c48139f4999f3100167
@@ -84,7 +84,7 @@
 
     <section id="main">
         <article class="container">
-          <h1 class="hero">Hubot Script</h1>
+          <h1 class="hero">Walkie &hearts; Hubot</h1>
           <p>First of all, if you haven’t heard of
 <a href="http://github.com/github/hubot">Hubot</a> yet, I suggest you check it out. Hubot is
 incredibly smart chat robot and it is high customizable. I use it in IRC
@@ -124,7 +124,7 @@ purposes:</p>
 </pre>
 </div>
 
-<p>That’s it you’re all done. When something’s happening on basecamp,
+<p>That’s it. You’re all done. When something’s happening on basecamp,
 walkie should announce it to the chatroom.</p>
 
         </article>
