updating gh-pages

--- a/hubot/index.html
+++ b/hubot/index.html
@@ -127,6 +127,10 @@ purposes:</p>
 <p>That’s it. You’re all done. When something’s happening on basecamp,
 walkie should announce it to the chatroom.</p>
 
+<h2 id="screenshot">Screenshot</h2>
+
+<p><img src="/img/walkie-irc.png" alt="" /></p>
+
         </article>
     </section>
 
