updating gh-pages

--- a/hubot/index.html
+++ b/hubot/index.html
@@ -129,7 +129,7 @@ walkie should announce it to the chatroom.</p>
 
 <h2 id="screenshot">Screenshot</h2>
 
-<p><img src="/img/walkie-irc.png" alt="" /></p>
+<p><img src="img/walkie-irc.png" alt="" /></p>
 
         </article>
     </section>
